<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_menu_lines"
        android:title="Menu"
        app:showAsAction="always" />
</menu>
